# mempalace

./: .gitignore  1  AGENT.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  FORK_CHANGELOG.md  HERMES_MEMPALACE_GUIDE.md  MISSION.md  NOTICES.md  PLAN.md  PR_DESCRIPTION.md  README.md  RESEARCH.md  RUST_PORT.md  UPGRADE.md  agent.py  deny.toml  email_to_ben.txt  flake.nix  mempalace.yaml  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  vercel.json
.claude-plugin/: .mcp.json  README.md  marketplace.json  plugin.json
.claude-plugin-remote/: .mcp.json  README.md  plugin.json
.codex-plugin/: README.md  hooks.json  plugin.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
.molthub/: project.md
benchmarks/: BENCHMARKS.md  BENCHMARKS_V4.md  HYBRID_MODE.md  README.md  _beam_utils.py  apple_silicon_bench.py  beam_100k_bench.py  bench_triples.py  convert_beam.py  convomem_bench.py  distilled_knowledge_bench.py  hnsw_drift_fuzzer.py  locomo_bench.py  longmemeval_bench.py  longmemeval_v4.py  membench_bench.py  multilingual_benchmark.py  multilingual_benchmark_extended.py  phase0_benchmarks.md  phase0_gate_check.py  phase0_gliner_bench.py  phase0_vllm_bench.py  qa_bench_v2.py  results_v4_comparison.json  results_walk_locomo_baseline.jsonl  walk_bench.py  walk_regression.jsonl  walk_regression_curation.md
crates/mempalace-cli/: Cargo.toml
crates/mempalace-cli/src/: main.rs
crates/mempalace-cli/tests/: cli.rs  e2e.rs  mcp_serve.rs
crates/mempalace-core/: Cargo.toml
crates/mempalace-core/src/: config.rs  error.rs  lib.rs  paths.rs  sanitize.rs
crates/mempalace-server/: Cargo.toml
crates/mempalace-server/src/: convo_miner.rs  hooks.rs  ingest.rs  lib.rs  mcp.rs  mcp_transport.rs  onboarding.rs  searcher.rs
crates/mempalace-server/tests/: hooks.rs  ingest.rs  mcp.rs  onboarding.rs  searcher.rs
crates/mempalace-store/: Cargo.toml
crates/mempalace-store/src/: knowledge_graph.rs  lancedb_backend.rs  layers.rs  lib.rs  palace.rs  palace_graph.rs
crates/mempalace-store/tests/: knowledge_graph.rs  layers.rs  palace.rs  palace_graph.rs
crates/mempalace-text/: Cargo.toml
crates/mempalace-text/src/: dialect.rs  entity_detector.rs  entity_registry.rs  general_extractor.rs  lib.rs  normalize.rs  room_detector.rs  spellcheck.rs  split_mega_files.rs
crates/mempalace-text/tests/: spellcheck.rs  split_mega_files.rs
csharp/: README.md
docs/: 404.html  TODO-fork-improvements.md  _config.yml  aaak.md  agents.md  architecture.md  benchmarks.md  cli-reference.md  cli.md  configuration.md  fix-lone-surrogate.md  fork-changes.yaml  gemini.md  getting-started.md  hooks.md  index.html  intro.md  knowledge-graph.md  known-issues.md  macos-m1-install-guide.md  mcp-server.md  mcp.md  milvus-backend.md  mining.md  multi-session-daemon.md  multi-session-setup.md  palace.md  phase-0-fix-foundation.md  python-api.md  quick-start.md  searching.md
eval/: BENCHMARK_RESULTS.md
examples/: HOOKS_TUTORIAL.md  agents_md_snippet.md  basic_mining.py  com.mempalace.daemon.plist  delphi_miner.py  delphi_miner_README.md  gemini_cli_setup.md  hexnest-multi-agent-handoff.md  mcp_setup.md  memory_archivist_demo.py  mempalace-bridge.py  mempalace-daemon.py  migrate_chroma_to_sqlite_vec.py  mine-all-sessions.ps1  mine-all-sessions.sh  mx3_public_shim_embeddings_rerank.md  mx3_public_shim_embeddings_rerank.py  ollama_wake_wrapper.md  ollama_wake_wrapper.sh  opencode_auto_plugin.js  opencode_auto_plugin_setup.md  opencode_install.sh  opencode_setup.md  personal_operating_system_memory.md  private_repo_setup.md  quickstart.md  quickstart_demo.py  software_engineering_memory.md  soulforge_setup.md
helper/: mempalace.yaml
hooks/: README.md  mempal_enrich_knowledge.sh  mempal_freshness_hook.sh  mempal_opencode_hook.sh  mempal_opencode_simple.sh  mempal_precompact_hook.sh  mempal_save_hook.sh  mempal_save_hook_throttled.sh  mempal_semantic_search.sh  mempal_session_start_hook.sh  mempal_verify_knowledge.sh  setup_multi_session_hooks.sh
mempalace/: README.md  __init__.py  __main__.py  agents.py  ambient.py  archive.py  archivist.py  backfill_filed_at_ts.py  backup.py  burgess.py  checkpoint.py  chroma_client.py  chroma_runtime.py  chromadb_utils.py  classifier.py  cli.py  cli_ld.py  cli_registry.json  closet_llm.py  compat.py  config.py  constants.py  content_hash.py  context_manager.py  convo_miner.py  corpus_origin.py  crystallize.py  cursor_miner.py  db.py  dedup.py  device_miner.py  dialect.py  diary_ingest.py  doctor.py  drawer_store.py  embedding.py  embeddings.py  entity_detector.py  entity_registry.py  exporter.py  (+63 more)
mempalace_chinese_benchmark/: README.md  baselines.json  evaluate.py  init_data.py  run_benchmark.py
multi-portal-app/: next.config.js  package.json  tailwind.config.js
palace_store/: __init__.py  compat.py  store.py
scripts/: bootstrap_codespace.sh  check_projection_drift.sh  closet_boost_ablation.py  deploy.sh  launch-mcp-persistent.sh  reconcile_upstream.sh  regen_spine.sh  setup_private_repo.sh  slack_desktop_export.py  validate_runtime.sh  write_projection_manifest.py
semantics/: README.md
tests/: conftest.py  test_adoc.py  test_agents.py  test_ambient.py  test_archive.py  test_atexit_and_cache_key.py  test_auto_discover.py  test_backends.py  test_backends_qdrant.py  test_backfill_filed_at_ts.py  test_benchmark_minimax.py  test_branch_coverage_misc.py  test_burgess.py  test_chroma_collection_lock.py  test_chroma_runtime.py  test_chromadb_utils.py  test_classifier.py  test_classifier_quality.py  test_claude_plugin_hook_wrappers.py  test_clean.py  test_cli.py  test_cli_repair.py  test_cli_search_uses_hybrid_rank.py  test_cli_subprocess.py  test_cli_walker.py  test_cli_walker_extract.py  test_closet_llm.py  test_closets.py  test_code_keywords.py  test_compat.py  test_concurrency.py  test_config.py  test_config_expansion.py  test_config_extra.py  test_content_hash.py  test_context_manager.py  test_convo_miner.py  test_convo_miner_chinese.py  test_convo_miner_hardening.py  test_convo_miner_unit.py  (+149 more)
(+334 files in other folders)
