[project]
name = "mempalace"
version = "3.3.0"
description = "Give your AI a memory — mine projects and conversations into a searchable palace. No API key required."
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [
    {name = "milla-jovovich"},
]
keywords = [
    "ai", "memory", "llm", "rag", "chromadb", "mcp",
    "vector-database", "claude", "chatgpt", "embeddings",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Utilities",
]
dependencies = [
    "blake3>=1.0.5,<2",
    "chromadb>=0.5.0",
    "pyyaml>=6.0,<7",
]

[project.urls]
Homepage = "https://github.com/Fleet-to-Force/mempalace"
Repository = "https://github.com/Fleet-to-Force/mempalace"
"Bug Tracker" = "https://github.com/Fleet-to-Force/mempalace/issues"

[project.scripts]
mempalace = "mempalace.cli_ld:main"
mempalace-mcp = "mempalace.mcp_server_ld:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "ruff>=0.4.0", "psutil>=5.9"]
spellcheck = ["autocorrect>=2.0"]

[dependency-groups]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "ruff>=0.4.0", "psutil>=5.9"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mempalace"]

[tool.hatch.build.targets.wheel.force-include]
"mempalace/runtime_profile.json" = "mempalace/runtime_profile.json"
"mempalace/cli_registry.json" = "mempalace/cli_registry.json"
"mempalace/mcp_tool_registry.json" = "mempalace/mcp_tool_registry.json"

[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = ["benchmarks"]

[tool.ruff.lint]
select = ["E", "F", "W", "C901"]
ignore = ["E501"]

[tool.ruff.lint.mccabe]
max-complexity = 25

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-m 'not benchmark and not slow and not stress'"
markers = [
    "benchmark: scale/performance benchmark tests",
    "slow: tests that take more than 30 seconds",
    "stress: destructive scale tests (100K+ drawers)",
]

[tool.coverage.run]
source = ["mempalace"]

[tool.coverage.report]
fail_under = 85
show_missing = true
exclude_lines = [
    "if __name__",
    "pragma: no cover",
]
